<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/image_sarcazm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@drawable/sarcazm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_students"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/studentFirstName_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_60dp"
            android:layout_marginLeft="@dimen/marginLeft_50dp"
            android:layout_marginTop="@dimen/margin_top_160dp"
            android:layout_marginRight="@dimen/marginLeft_50dp"
            android:ems="10"
            android:padding="@dimen/margin_top_16dp"
            android:background="@drawable/ic_type_row"
            android:drawableLeft="@drawable/ic_draw_selector"
            android:drawablePadding="@dimen/margin_top_16dp"
            android:hint="@string/first_name_16sp"
            android:maxLength="20"
            android:inputType="textPersonName"
            android:textColor="@color/purple_700"
            android:textColorHint="@color/purple_700"
            android:textSize="@dimen/textSize_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/studentLastName_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_60dp"
            android:layout_marginLeft="@dimen/marginLeft_50dp"
            android:layout_marginTop="@dimen/margin_top_16dp"
            android:layout_marginRight="@dimen/marginLeft_50dp"
            android:ems="10"
            android:maxLength="20"
            android:padding="@dimen/margin_top_16dp"
            android:background="@drawable/ic_type_row"
            android:drawableLeft="@drawable/ic_draw_selector"
            android:drawablePadding="@dimen/margin_top_16dp"
            android:hint="@string/lest_name_hint"
            android:inputType="textPersonName"
            android:textColor="@color/purple_700"
            android:textColorHint="@color/purple_700"
            android:textSize="@dimen/textSize_16sp"
            app:layout_constraintEnd_toEndOf="@+id/studentFirstName_et"
            app:layout_constraintStart_toStartOf="@+id/studentFirstName_et"
            app:layout_constraintTop_toBottomOf="@+id/studentFirstName_et" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft_50dp"
            android:layout_marginTop="@dimen/margin_top_16dp"
            android:layout_marginRight="@dimen/marginLeft_50dp"
            android:padding="@dimen/padding_10"
            app:layout_constraintEnd_toEndOf="@+id/studentLastName_et"
            app:layout_constraintStart_toStartOf="@+id/studentLastName_et"
            app:layout_constraintTop_toBottomOf="@+id/studentLastName_et">

            <Button
                android:id="@+id/addButton"
                android:layout_width="@dimen/margin_140dp"
                android:layout_height="@dimen/layout_height_60dp"
                android:text="@string/add_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/showButton"
                android:layout_width="@dimen/margin_140dp"
                android:layout_height="@dimen/layout_height_60dp"
                android:text="@string/show_students"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/counterStudents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_height_60dp"
            android:text="@string/total_number_of_students"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/counterStudents_textSize"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/countSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/min_three_dp_3dp"
            tools:text="10"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/counterStudents_textSize"
            app:layout_constraintBottom_toBottomOf="@+id/counterStudents"
            app:layout_constraintStart_toEndOf="@+id/counterStudents"
            app:layout_constraintTop_toTopOf="@+id/counterStudents" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



